# rdf-web-viz

./: .gitignore  Dockerfile  Makefile  README.md  openapi.yaml  queries.md
gabe-demo/: BrickDBSchema.sql  test.db  work_with_db.py
remove-version-test/: BrickDBSchema.sql  hello_word.yml  hello_world.py  test.db  user_graph.py  user_graph_api.yml  work_with_db.py
src/python/: .gitignore  README.md  requirements.txt
src/python/GraphParser/: GraphParser.py
src/python/GraphParser/TestGraphs/: graph1.ttl
src/python/bruplint_backend/: app.py  app_new.py  user_graph.py  util.py  version_free_app.py  work_with_db.py
src/python/bruplint_backend/instance/: bruplint.db
src/rust/: Cargo.toml  README.md
src/rust/lib/: Cargo.toml
src/rust/lib/src/: lib.rs
src/rust/python/: Cargo.toml  pyproject.toml
src/rust/python/src/: lib.rs
src/rust/wasm/: Cargo.toml
src/rust/wasm/src/: lib.rs
src/typescript/: .gitignore  README.md  astro.config.mjs  package.json
src/typescript/src/components/: PageHeader.ts  PageHeader.vue  RegexTransform.ts  RegexTransform.vue  SparqlTransform.ts  SparqlTransform.vue  TransformHeader.ts  TransformHeader.vue  TransformList.ts  TransformList.vue
src/typescript/src/modules/: greeter.ts  main.ts  transform_element.ts  util.ts  vue_entrypoint.ts
src/typescript/src/modules/vue_plugins/: global_binding_directive.ts
src/typescript/src/pages/: greet.astro  index.astro
test-code/: graph.ttl  test.db  work_with_db.py
