[package]
name = "brutil-js"
version = "0.1.0"
authors = ["username"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brutil = { version = "0.0.1", path="../lib" }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
